@@ -8,6 +8,7 @@ import org.junit.jupiter.api.Test;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.junit.jupiter.api.Assertions.assertFalse;
@@ -24,52 +25,52 @@ public class CanjeTest {
 
     @Test
     public void PuedoCanjearTresCartasConDistintoSimbolo(){
-        Carta carta1 = new Carta("Argentina", "Fiat Palio");
-        Carta carta2 = new Carta("Brasil", "Globo");
-        Carta carta3 = new Carta("Ecuador", "Barco");
+        Carta carta1 = new Carta(new Pais("Argentina", new ArrayList<>(List.of("Brasil"))), "Fiat Palio");
+        Carta carta2 = new Carta(new Pais("Brasil", new ArrayList<>(List.of("Argentina"))), "Globo");
+        Carta carta3 = new Carta(new Pais("Ecuador", new ArrayList<>(List.of("Brasil"))), "Barco");
         assertTrue(Carta.canjeables(carta1, carta2,carta3));
     }
 
     @Test
     public void PuedoCanjearTresCartasConMismoSimbolo(){
-        Carta carta1 = new Carta("Argentina", "Buenarda moto");
-        Carta carta2 = new Carta("Brasil", "Buenarda moto");
-        Carta carta3 = new Carta("Ecuador", "Buenarda moto");
+        Carta carta1 = new Carta(new Pais("Argentina", new ArrayList<>(List.of("Brasil"))), "Buenarda moto");
+        Carta carta2 = new Carta(new Pais("Brasil", new ArrayList<>(List.of("Argentina"))), "Buenarda moto");
+        Carta carta3 = new Carta(new Pais("Ecuador", new ArrayList<>(List.of("Brasil"))), "Buenarda moto");
         assertTrue(Carta.canjeables(carta1, carta2,carta3));
     }
 
     @Test
     public void NoPuedoCanjearDosCartasIgualesYUnaDistinta(){
-        Carta carta1 = new Carta("Argentina", "Fiat Palio");
-        Carta carta2 = new Carta("Brasil", "Buenarda moto");
-        Carta carta3 = new Carta("Ecuador", "Buenarda moto");
+        Carta carta1 = new Carta(new Pais("Argentina", new ArrayList<>(List.of("Brasil"))), "Fiat Palio");
+        Carta carta2 = new Carta(new Pais("Brasil", new ArrayList<>(List.of("Argentina"))), "Buenarda moto");
+        Carta carta3 = new Carta(new Pais("Ecuador", new ArrayList<>(List.of("Brasil"))), "Buenarda moto");
         assertFalse(Carta.canjeables(carta1, carta2,carta3));
     }
 
     @Test
     public void PuedoCanjearDosCartasIgualesYUnComodin(){
-        Carta carta1 = new Carta("Argentina", "Comodin");
-        Carta carta2 = new Carta("Brasil", "Buenarda moto");
-        Carta carta3 = new Carta("Ecuador", "Buenarda moto");
+        Carta carta1 = new Carta(new Pais("Argentina", new ArrayList<>(List.of("Brasil"))), "Comodin");
+        Carta carta2 = new Carta(new Pais("Brasil", new ArrayList<>(List.of("Argentina"))), "Buenarda moto");
+        Carta carta3 = new Carta(new Pais("Ecuador", new ArrayList<>(List.of("Brasil"))), "Buenarda moto");
         assertTrue(Carta.canjeables(carta1, carta2,carta3));
     }
 
     @Test
     public void PuedoCanjearDosCartasDistintasYUnComodin(){
-        Carta carta1 = new Carta("Argentina", "Comodin");
-        Carta carta2 = new Carta("Brasil", "Fiat Palio");
-        Carta carta3 = new Carta("Ecuador", "Buenarda moto");
+        Carta carta1 = new Carta(new Pais("Argentina", new ArrayList<>(List.of("Brasil"))), "Comodin");
+        Carta carta2 = new Carta(new Pais("Brasil", new ArrayList<>(List.of("Argentina"))), "Fiat Palio");
+        Carta carta3 = new Carta(new Pais("Ecuador", new ArrayList<>(List.of("Brasil"))), "Buenarda moto");
         assertTrue(Carta.canjeables(carta1, carta2,carta3));
     }
 
     @Test
     public void PrimerCanjeDevuelveCantidadCorrectaDeFichas() throws NoSePuedeCanjearEnEtapaBatallaException, PaisNoTePerteneceException, FichasInsuficientesException, PaisNoLimitrofeException, MovimientoConCantidadInvalidaException, AtaqueConCantidadInvalidaException, AtaqueAPaisPropioException {
         Etapa etapa;
-        Carta carta1 = new Carta("Argentina", "Fiat Palio");
-        Carta carta2 = new Carta("Brasil", "Globo");
-        Carta carta3 = new Carta("Ecuador", "Barco");
         Pais argentina = new Pais("Argentina", new ArrayList<>(Arrays.asList("Brasil", "Uruguay", "Bolivia")));
         Pais brasil = new Pais("Brasil", new ArrayList<>(Arrays.asList("Argentina", "Uruguay", "Bolivia")));
+        Carta carta1 = new Carta(argentina, "Fiat Palio");
+        Carta carta2 = new Carta(brasil, "Globo");
+        Carta carta3 = new Carta(new Pais("Ecuador", new ArrayList<>(List.of("Brasil"))), "Barco");
         Jugador jugador1 = new Jugador("Nicolas");
         jugador1.darleCarta(carta1);
         jugador1.darleCarta(carta2);
@@ -86,14 +87,14 @@ public class CanjeTest {
     @Test
     public void SegundoCanjeDevuelveCantidadCorrectaDeFichas() throws NoSePuedeCanjearEnEtapaBatallaException, PaisNoTePerteneceException, FichasInsuficientesException, PaisNoLimitrofeException, MovimientoConCantidadInvalidaException, AtaqueConCantidadInvalidaException, AtaqueAPaisPropioException {
         Etapa etapa;
-        Carta carta1 = new Carta("Argentina", "Fiat Palio");
-        Carta carta2 = new Carta("Brasil", "Globo");
-        Carta carta3 = new Carta("Ecuador", "Barco");
-        Carta carta4 = new Carta("Peru", "Fiat Palio");
-        Carta carta5 = new Carta("Uruguay", "Globo");
-        Carta carta6 = new Carta("Colombia", "Barco");
         Pais argentina = new Pais("Argentina", new ArrayList<>(Arrays.asList("Brasil", "Uruguay", "Bolivia")));
         Pais brasil = new Pais("Brasil", new ArrayList<>(Arrays.asList("Argentina", "Uruguay", "Bolivia")));
+        Carta carta1 = new Carta(argentina, "Fiat Palio");
+        Carta carta2 = new Carta(brasil, "Globo");
+        Carta carta3 = new Carta(new Pais("Ecuador", new ArrayList<>(List.of("Brasil"))), "Barco");
+        Carta carta4 = new Carta(new Pais("Peru", new ArrayList<>(List.of("Ecuador"))), "Fiat Palio");
+        Carta carta5 = new Carta(new Pais("Uruguay", new ArrayList<>(List.of("Argentina"))), "Globo");
+        Carta carta6 = new Carta(new Pais("Colombia", new ArrayList<>(List.of("Ecuador"))), "Barco");
         Jugador jugador1 = new Jugador("Nicolas");
         jugador1.darleCarta(carta1);
         jugador1.darleCarta(carta2);
@@ -103,7 +104,7 @@ public class CanjeTest {
         jugador1.darleCarta(carta6);
         jugador1.agregarPais(argentina);
         jugador1.agregarPais(brasil);
-        Etapa.asignarValores(new ArrayList<>(), new ArrayList<>(Arrays.asList(jugador1)), new ArrayList<>(Arrays.asList(carta1,carta2,carta3,carta4,carta5,carta6)));
+        Etapa.asignarValores(new ArrayList<>(), new ArrayList<>(List.of(jugador1)), new ArrayList<>(List.of(carta1,carta2,carta3,carta4,carta5,carta6)));
         etapa = new EtapaColocacion();
         etapa.canjearCartas(carta1, carta2, carta3);
         etapa.canjearCartas(carta4, carta5, carta6);
@@ -114,20 +115,20 @@ public class CanjeTest {
     @Test
     public void NCanjesDevuelveCantidadCorrectaDeFichas() throws NoSePuedeCanjearEnEtapaBatallaException, PaisNoTePerteneceException, FichasInsuficientesException, PaisNoLimitrofeException, MovimientoConCantidadInvalidaException, AtaqueConCantidadInvalidaException, AtaqueAPaisPropioException {
         Etapa etapa;
-        Carta carta1 = new Carta("Argentina", "Fiat Palio");
-        Carta carta2 = new Carta("Brasil", "Globo");
-        Carta carta3 = new Carta("Ecuador", "Barco");
-        Carta carta4 = new Carta("Peru", "Fiat Palio");
-        Carta carta5 = new Carta("Uruguay", "Globo");
-        Carta carta6 = new Carta("Colombia", "Barco");
-        Carta carta7 = new Carta("Italia", "Fiat Palio");
-        Carta carta8 = new Carta("Francia", "Globo");
-        Carta carta9 = new Carta("Canada", "Barco");
-        Carta carta10 = new Carta("EEUU", "Fiat Palio");
-        Carta carta11 = new Carta("Mexico", "Globo");
-        Carta carta12 = new Carta("Alemania", "Barco");
-        Pais argentina = new Pais("Argentina", new ArrayList<>(Arrays.asList("Brasil", "Uruguay", "Bolivia")));
-        Pais brasil = new Pais("Brasil", new ArrayList<>(Arrays.asList("Argentina", "Uruguay", "Bolivia")));
+        Pais argentina = new Pais("Argentina", new ArrayList<>(List.of("Brasil", "Uruguay", "Bolivia")));
+        Pais brasil = new Pais("Brasil", new ArrayList<>(List.of("Argentina", "Uruguay", "Bolivia")));
+        Carta carta1 = new Carta(argentina, "Fiat Palio");
+        Carta carta2 = new Carta(brasil, "Globo");
+        Carta carta3 = new Carta(new Pais("Ecuador", new ArrayList<>(List.of("Brasil"))), "Barco");
+        Carta carta4 = new Carta(new Pais("Peru", new ArrayList<>(List.of("Ecuador"))), "Fiat Palio");
+        Carta carta5 = new Carta(new Pais("Uruguay", new ArrayList<>(List.of("Argentina"))), "Globo");
+        Carta carta6 = new Carta(new Pais("Colombia", new ArrayList<>(List.of("´Peru"))), "Barco");
+        Carta carta7 = new Carta(new Pais("Italia", new ArrayList<>(List.of("Francia"))), "Fiat Palio");
+        Carta carta8 = new Carta(new Pais("Francia", new ArrayList<>(List.of("Italia"))), "Globo");
+        Carta carta9 = new Carta(new Pais("Canada", new ArrayList<>(List.of("EEUU"))), "Barco");
+        Carta carta10 = new Carta(new Pais("EEUU", new ArrayList<>(List.of("Canada"))), "Fiat Palio");
+        Carta carta11 = new Carta(new Pais("Mexico", new ArrayList<>(List.of("EEUU"))), "Globo");
+        Carta carta12 = new Carta(new Pais("Alemania", new ArrayList<>(List.of("Francia"))), "Barco");
         Jugador jugador1 = new Jugador("Nicolas");
         jugador1.darleCarta(carta1);
         jugador1.darleCarta(carta2);
@@ -143,7 +144,7 @@ public class CanjeTest {
         jugador1.darleCarta(carta12);
         jugador1.agregarPais(argentina);
         jugador1.agregarPais(brasil);
-        Etapa.asignarValores(new ArrayList<>(), new ArrayList<>(Arrays.asList(jugador1)), new ArrayList<>(Arrays.asList(carta1,carta2,carta3,carta4,carta5,carta6)));
+        Etapa.asignarValores(new ArrayList<>(), new ArrayList<>(List.of(jugador1)), new ArrayList<>(List.of(carta1,carta2,carta3,carta4,carta5,carta6)));
         etapa = new EtapaColocacion();
         etapa.canjearCartas(carta1, carta2, carta3);
         etapa.canjearCartas(carta4, carta5, carta6);
@@ -156,11 +157,11 @@ public class CanjeTest {
     @Test
     public void CanjeConContinenteConquistadoDevuelveCantidadCorrectaDeFichas() throws NoSePuedeCanjearEnEtapaBatallaException, PaisNoLimitrofeException, MovimientoConCantidadInvalidaException, PaisNoTePerteneceException, AtaqueConCantidadInvalidaException, FichasInsuficientesException, AtaqueAPaisPropioException {
         Etapa etapa;
-        Carta carta1 = new Carta("Argentina", "Fiat Palio");
-        Carta carta2 = new Carta("Brasil", "Globo");
-        Carta carta3 = new Carta("Ecuador", "Barco");
         Pais argentina = new Pais("Argentina", new ArrayList<>(Arrays.asList("Brasil", "Uruguay", "Bolivia")));
         Pais brasil = new Pais("Brasil", new ArrayList<>(Arrays.asList("Argentina", "Uruguay", "Bolivia")));
+        Carta carta1 = new Carta(argentina, "Fiat Palio");
+        Carta carta2 = new Carta(brasil, "Globo");
+        Carta carta3 = new Carta(new Pais("Ecuador", new ArrayList<>(List.of("Brasil"))), "Barco");
         Continente america = new Continente("America", 5);
         Jugador jugador1 = new Jugador("Nicolas");
         Jugador jugador2 = new Jugador("Random");
@@ -171,7 +172,7 @@ public class CanjeTest {
         america.agregarPais(brasil);
         jugador1.agregarPais(argentina);
         jugador1.agregarPais(brasil);
-        Etapa.asignarValores(new ArrayList<>(Arrays.asList(america)), new ArrayList<>(Arrays.asList(jugador1, jugador2)), new ArrayList<>(Arrays.asList(carta1,carta2,carta3)));
+        Etapa.asignarValores(new ArrayList<>(List.of(america)), new ArrayList<>(List.of(jugador1, jugador2)), new ArrayList<>(List.of(carta1,carta2,carta3)));
         etapa = new EtapaColocacion();
         etapa.canjearCartas(carta1, carta2, carta3);
         etapa.jugar(10, argentina);
